[package]
name = "egui_edit"
description = "Editor built with egui."
version = "0.1.0"
authors = ["Kristófer Reykjalín <kristofer@thorlaksson.com>"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.26.0"
eframe = { version = "0.26.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

env_logger = "0.10"
epaint = "0.26.2"
rfd = "0.14.1"
futures = "0.3.30"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }

[package.metadata.bundle]
name = "egui_edit"
identifier = "com.thorlaksson.egui_edit"
icon = ["assets/E1C1.png"]
version = "1.0.0"
resources = ["assets"]
category = "Developer Tool"
short_description = "Editor built with egui."
long_description = """
Editor built with egui. Test to see if a simple editor can be built with egui.
"""
